todo: fix deriveValues

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -127,7 +127,7 @@ svg path {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      right: @spacing-md;
+      right: @spacing-sm;
       padding: unset;
 
       span {
@@ -792,7 +792,7 @@ svg path {
             font-size: @base-font-size;
 
             &:last-of-type {
-              font-size: @sm-font-size;
+              font-size: @xs-font-size;
               margin-top: -5px;
             }
           }
