--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -1805,7 +1805,7 @@ table {
       font-weight: @bold-weight;
       text-transform: uppercase;
       color: rgb(var(--lt-white));
-  
+
       &.active,
       &:hover {
         opacity: 1;
@@ -1867,7 +1867,8 @@ table {
 
         &-top {
           height: 70%;
-          .nav-link, button {
+          .nav-link,
+          button {
             margin: @spacing-xl auto;
           }
         }
@@ -2045,7 +2046,8 @@ table {
       }
 
       .right-container {
-        .nav-link, button {
+        .nav-link,
+        button {
           display: none;
         }
         &-hamburger {
