radar style + user context fix

--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -1378,27 +1378,28 @@ table {
   &-rail {
     position: absolute;
     width: 100%;
-    height: 4px;
+    height: 5px;
     background-color: rgba(var(--black), 0.5);
+    box-shadow: @neu-shadow-inset-low;
     border-radius: @round-radius;
   }
   &-track {
     position: absolute;
-    height: 4px;
+    height: 5px;
     background: @gradient;
     border-radius: @round-radius;
   }
   &-step {
     position: absolute;
     width: 100%;
-    height: 4px;
+    height: 5px;
     border-radius: @round-radius;
   }
   &-handle {
     position: absolute;
     width: 12px;
     height: 12px;
-    margin-top: -5px;
+    margin-top: -4px;
     background: @grey;
     box-shadow: @neu-shadow-inset-low;
     border-radius: @round-radius;
