--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -516,9 +516,14 @@ svg path {
                 padding-bottom: @spacing-lg;
               }
             }
-            &.dark-bg {
+            &.row-bg {
               td {
                 background: rgba(0, 0, 0, 0.25);
+              }
+              &.white {
+                td {
+                  background: rgba(200, 200, 200, 0.25);
+                }
               }
             }
           }
