remove color styling radar modal

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -498,12 +498,12 @@ svg path {
             &:first-of-type {
               td {
                 padding: @spacing-lg 0 @spacing-xs 0;
-                font-weight: @subheader-weight;
+                //font-weight: @subheader-weight;
                 &.deposit-rate {
-                  color: @success;
+                  //color: @success;
                 }
                 &.borrow-rate {
-                  color: @failure;
+                  //color: @failure;
                 }
 
                 img {
