implementing user feedback

--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -19,14 +19,14 @@
 :root {
   // Light theme color variables
   --lt-black: 69, 69, 69;
-  --lt-dark-grey: 148, 148, 148;
+  --lt-dark-grey: 128, 128, 128;
   --lt-grey: 216, 223, 236;
   --lt-light-grey: 225, 231, 241;
   --lt-white: 229, 235, 244;
 
   // Dark theme color variables
   --dt-black: 255, 255, 255;
-  --dt-dark-grey: 107, 104, 104;
+  --dt-dark-grey: 175, 175, 175;
   --dt-grey: 30, 30, 35;
   --dt-light-grey: 28, 28, 35;
   --dt-white: 35, 35, 35;
@@ -117,7 +117,7 @@
 // Opacities
 @subtle-opacity: 0.95;
 @disabled-opacity: 0.725;
-@half-opacity: 0.5;
+@half-opacity: 0.65;
 
 // Standardized spacing
 @spacing-xs: 4px;
@@ -946,7 +946,7 @@ table {
   transform: translate(-50%, -50%);
   background: @light-grey;
   color: @black;
-  padding: @spacing-sm;
+  padding: @spacing-md;
   border-radius: @border-radius;
   box-shadow: @drop-shadow;
   opacity: @subtle-opacity;
