--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -593,8 +593,8 @@ svg path {
 
     &-range-value {
       position: absolute;
-      bottom: -20px;
-      font-size: @xs-font-size;
+      bottom: -22px;
+      font-size: @sm-font-size;
       color: @dark-grey;
     }
 
@@ -1394,26 +1394,6 @@ svg path {
 
               &:last-of-type {
                 font-size: @lg-font-size;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-  .transaction-logs {
-    .table-container {
-      table {
-        tr {
-          &:last-of-type {
-            td {
-              &:first-of-type {
-                i {
-                  display: unset;
-                }
-                span {
-                  display: none;
-                }
               }
             }
           }
