--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -786,6 +786,44 @@ svg path {
             border-right: unset;
           }
         }
+
+        // Mobile Trade Select Dropdown
+        .mobile-trade-select {
+          display: none;
+          width: 100%;
+          margin-bottom: @spacing-md;
+
+          .ant-select {
+            border-radius: unset;
+            box-shadow: unset;
+            margin: @spacing-xs 0;
+            min-width: 150px;
+            &:after {
+              content: '';
+              position: absolute;
+              bottom: 0;
+              left: 0;
+              width: 100%;
+              height: 1px;
+              background: @white;
+            }
+
+            &-selector {
+              text-align: center;
+            }
+            &-selection-item {
+              color: @white;
+              font-weight: @subheader-weight;
+            }
+            svg {
+              width: 15px;
+              height: 15px;
+              path {
+                fill: @white;
+              }
+            }
+          }
+        }
       }
 
       .trade-section {
@@ -895,7 +933,6 @@ svg path {
             min-width: 100px;
           }
           &.native-toggle-container {
-            opacity: 1;
             padding-bottom: 3px;
           }
         }
@@ -1154,7 +1191,7 @@ svg path {
 @media screen and (max-width: 600px) {
   // Views
   .view-header {
-    font-size: @header-font-size;
+    font-size: @xl-font-size;
     line-height: 35px;
 
     span {
@@ -1288,6 +1325,7 @@ svg path {
 
     // Cockpit top data
     &-top {
+      justify-content: flex-start;
       .trade-market-tvl,
       .trade-position-snapshot {
         min-width: unset;
@@ -1302,14 +1340,11 @@ svg path {
         }
       }
       .trade-position-snapshot {
-        width: 100%;
-        padding: @spacing-xs @spacing-md;
         justify-content: space-evenly;
         .trade-position-ratio {
-          padding-right: @spacing-lg;
 
           h1 {
-            font-size: 25px;
+            font-size: @xl-font-size;
           }
         }
         p {
@@ -1328,16 +1363,18 @@ svg path {
     .trade-table-container {
       // Trade Panel
       .trade-panel {
-        padding: 45px 0 @spacing-md 0;
+        padding: 0 0 @spacing-md 0;
         flex-direction: column;
         justify-content: center;
 
         .trade-select-container {
+          position: relative;
+
           .trade-select {
-            padding: @spacing-sm @spacing-xs;
-            p {
-              line-height: 12px;
-            }
+            display: none;
+          }
+          .mobile-trade-select {
+            display: flex;
           }
         }
         .trade-section {
@@ -1382,10 +1419,10 @@ svg path {
               &.market-table-asset {
                 span {
                   &:first-of-type {
-                    top: 20px !important;
+                    top: 17px !important;
                   }
                   &:last-of-type {
-                    top: 35px !important;
+                    top: 32px !important;
                   }
                 }
               }
