--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -1175,6 +1175,13 @@ svg path {
   }
 }
 
+// Terms of Service and Privacy Policy
+.terms-privacy {
+  a {
+    margin: @spacing-xs @spacing-sm;
+  }
+}
+
 // Mobile styling
 @media screen and (max-width: 600px) {
   // Views
