--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -720,7 +720,7 @@ svg path {
           cursor: pointer;
           p {
             margin: @spacing-xs;
-            font-size: calc(@base-font-size - 1px);
+            font-size: @base-font-size;
             font-weight: @subheader-weight;
             letter-spacing: 0.5px;
             line-height: 17px;
