--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -117,7 +117,7 @@
 @bold-weight: 550;
 
 // Opacities
-@subtle-opacity: 0.97;
+@subtle-opacity: 0.95;
 @disabled-opacity: 0.75;
 @half-opacity: 0.65;
 
@@ -162,6 +162,14 @@ body {
   &.ant-scrolling-effect {
     overflow: unset !important;
   }
+}
+code {
+  font-family: monospace;
+}
+
+// Svg's
+svg path {
+  fill: @black;
 }
 
 // Flexbox
@@ -266,6 +274,9 @@ span {
 }
 .text-gradient-btn {
   position: relative;
+  letter-spacing: 1px;
+  cursor: pointer;
+
   &::after {
     content: '';
     position: absolute;
@@ -292,6 +303,8 @@ span {
 }
 .text-btn {
   text-decoration: none;
+  letter-spacing: 1px;
+  cursor: pointer;
 
   &:hover {
     text-decoration: underline;
@@ -439,22 +452,33 @@ button,
       }
     }
     &:active {
+      box-shadow: unset;
       &::after {
-        background: @gradient;
-      }
-
-      span {
-        background-image: unset;
-        -webkit-background-clip: unset;
-        -webkit-text-fill-color: unset;
+        background: @grey;
       }
     }
   }
 
+  // Full width button
+  &.full-width {
+    width: 100%;
+    margin: @spacing-xs 0;
+  }
+
   // Smaller button
   &.small-btn,
-  &.small-btn span {
+  &.small-btn span,
+  &.ant-btn-sm,
+  &.ant-btn-sm span {
     font-size: @xs-font-size !important;
+  }
+
+  // Larger button
+  &.large-btn,
+  &.large-btn span,
+  &.ant-btn-lg,
+  &.ant-btn-lg span {
+    font-size: @lg-font-size !important;
   }
 
   // Error button
@@ -615,12 +639,11 @@ table {
       font-size: @xs-font-size;
       letter-spacing: 0.5px;
       text-transform: uppercase;
-      text-align: center;
+      text-align: left;
       color: rgba(var(--black), @half-opacity);
 
       &:first-of-type {
         padding-left: @spacing-md;
-        text-align: left;
       }
       &:last-of-type {
         min-width: unset;
@@ -641,7 +664,7 @@ table {
   tr {
     border-radius: @border-radius;
     cursor: pointer;
-    transition: unset;
+    transition: background-color @transition-duration ease-in-out;
 
     &:hover {
       background: @grey;
@@ -675,7 +698,7 @@ table {
     border-radius: unset;
     padding: @spacing-md;
     background: transparent;
-    text-align: center;
+    text-align: left;
     cursor: pointer;
     opacity: @subtle-opacity;
 
@@ -683,7 +706,6 @@ table {
       padding-left: @spacing-md;
       border-top-left-radius: @border-radius;
       border-bottom-left-radius: @border-radius;
-      text-align: left;
     }
     &:last-of-type {
       padding-left: @spacing-lg;
@@ -745,7 +767,7 @@ table {
     .ant-modal-title {
       font-size: @header-font-size;
       font-weight: @header-weight;
-      line-height: @header-font-size;
+      line-height: calc(@header-font-size + 5px);
       padding: @spacing-lg 0 @spacing-sm 0;
     }
 
@@ -782,8 +804,8 @@ table {
 
     .ant-modal-close {
       position: absolute;
-      top: 0;
-      right: @spacing-md;
+      top: -7px;
+      right: @spacing-xs;
       padding: unset;
       background: unset;
       opacity: @subtle-opacity;
@@ -986,6 +1008,9 @@ table {
   }
 
   // Other placements
+  .ant-tooltip-arrow {
+    display: none;
+  }
   &-placement-left .ant-tooltip-arrow {
     top: calc(50% - 6px);
     left: calc(100% + 3px);
@@ -1753,7 +1778,7 @@ table {
 
   // When notification goes away
   &-fade-leave {
-    //display: none;
+    display: none;
   }
 }
 .ant-message {
@@ -1819,11 +1844,25 @@ table {
       font-weight: @bold-weight;
       text-transform: uppercase;
       color: rgb(var(--lt-white));
+      transition: opacity @transition-duration ease-in-out;
+      &::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background: rgb(var(--lt-white));
+        opacity: 0;
+        transition: opacity @transition-duration ease-in-out;
+      }
 
       &.active,
       &:hover {
         opacity: 1;
-        text-decoration: underline;
+        &::after {
+          opacity: 1;
+        }
       }
     }
 
