move styling for footers into jet-antd

--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -2015,8 +2015,12 @@ table {
   transform: translateX(-50%);
   width: 100%;
 
+  a {
+    margin: @spacing-xs @spacing-sm;
+  }
   span {
     opacity: @disabled-opacity;
+    margin: @spacing-xs;
     cursor: pointer;
 
     &:hover {
