add new colors for holly

--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -53,6 +53,8 @@
   // Other root colors
   --jet-green: #3d9e83;
   --jet-blue: #278db6;
+  --light-green-1: #8EBBB1;
+  --light-green-2: #72AB9B;
   --success: #53bd9f;
   --warning: #e3cb79;
   --failure: #ec6a69;
@@ -66,6 +68,8 @@
 @white: rgb(var(--white));
 @jet-green: var(--jet-green);
 @jet-blue: var(--jet-blue);
+@light-green-1: var(--light-green-1);
+@light-green-2: var(--light-green-2);
 @success: var(--success);
 @warning: var(--warning);
 @failure: var(--failure);
