--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -53,8 +53,8 @@
   // Other root colors
   --jet-green: #3d9e83;
   --jet-blue: #278db6;
-  --light-green-1: #8EBBB1;
-  --light-green-2: #72AB9B;
+  --light-green-1: #8ebbb1;
+  --light-green-2: #72ab9b;
   --success: #53bd9f;
   --warning: #e3cb79;
   --failure: #ec6a69;
