--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -913,7 +913,8 @@
           cursor: unset;
         }
 
-        th,td {
+        th,
+        td {
           text-align: center;
         }
         th {
