--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -1048,7 +1048,6 @@
         cursor: unset;
 
         th {
-          min-width: 75px;
           padding-bottom: @spacing-xs;
         }
       }
@@ -1082,6 +1081,8 @@
               fill: @jet-green;
             }
           }
+          padding: unset;
+          text-align: center;
           opacity: 0;
           transition: opacity @transition-duration ease-in-out;
         }
