navbar logo redirects to home

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -629,6 +629,7 @@
       p {
         font-size: @xs-font-size;
         font-weight: @subheader-weight;
+        margin: unset !important;
       }
       span {
         font-size: 8px;
