fix modal margins

--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -782,6 +782,10 @@ table {
 
     .ant-modal-body {
       padding: @spacing-md 0;
+
+      p {
+        margin: @spacing-sm 0;
+      }
     }
 
     .ant-modal-footer {
@@ -806,11 +810,6 @@ table {
           opacity: @disabled-opacity;
         }
       }
-    }
-
-    h1,
-    p {
-      margin: 1rem 0.5rem 0.5rem 0.5rem;
     }
 
     .ant-modal-close {
