--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -444,6 +444,11 @@
       padding: 0 @spacing-xs;
     }
   }
+  span {
+    opacity: @disabled-opacity;
+    margin-left: @spacing-xs;
+    font-size: @xs-font-size;
+  }
   .ant-modal-content {
     width: auto;
     max-width: unset;
@@ -467,10 +472,7 @@
             padding: @spacing-xs 0;
             font-size: @xs-font-size;
             width: 140px;
-
-            &:first-of-type {
-              text-align: center;
-            }
+            text-align: center;
           }
 
           &:after {
